# landfill

./: Cargo.toml  IDEAS.md  README.md  flake.nix
src/: TODO.md  appendonly.rs  array.rs  bytes.rs  checksum.rs  contentid.rs  data.rs  entropy.rs  header.rs  helpers.rs  index.rs  journal.rs  landfill.rs  lib.rs
src/disk/: mod.rs
src/diskbytes/: journaled.rs  mod.rs  raw.rs  writeonce.rs
src/storage/: appendonly.rs  array.rs  bytes.rs  entropy.rs  journal.rs  mod.rs  randomaccess.rs
src/structures/: content.rs  hashmap.rs  mod.rs  oncemap.rs  smash.rs
tests/: appendonly.rs  array.rs  content.rs  duplicates.rs  hashmap.rs  locking.rs  oncemap.rs  random.rs  selfdestruct.rs  smashmap.rs  with_temp_path.rs
