[package]
name = "landfill"
description = "Various types for dealing with on-disk data"
repository = "https://github.com/krl/landfill"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
bytemuck = "1.13.1"
bytemuck_derive = "1.4.1"
memmap2 = "0.7.1"
parking_lot = "0.12.1"
seahash = "4.1.0"
rand = "0.8.5"

[dev-dependencies]
tempfile = "3.6.0"
